# Projet-S9

./: 100dB.ipynb  1Dplotlib.py  20dB.ipynb  All_gen.ipynb  CNN.ipynb  CNN.py  CNN_proj.py  Cnn.ipynb  Database.py  Etude_Filtre.py  MCircu_gen.py  MCurvi.py  MRU_gen.py  MUA.py  MUA_database_gen.py  MUA_gen.py  README.md  Singer_gen.py  autocorrelation_include.py  create_csv.py  create_dataset_lib.py  dataload.py  estimation_param.py  example_usage.ipynb  main.py  mes_essaies_C.txt  pyproject.toml  read_csv.py  requirements.txt  test.py  testing_file.py  whiteness_test.py
extras/exercises/: 00_pytorch_fundamentals_exercises.ipynb
notebooks/: pratique.ipynb  resuts_analysis.ipynb  trajectories_dataset_variable_lengths_noise.csv
results/: simulation_1_1.csv  simulation_1_2.csv  simulation_1_3.csv  simulation_1_4.csv  simulation_1_5.csv  simulation_1_6.csv  simulation_2_1.csv  simulation_2_2.csv  simulation_2_3.csv  simulation_2_4.csv  simulation_2_5.csv  simulation_2_6.csv  simulation_3_1.csv  simulation_3_2.csv  simulation_3_3.csv  simulation_3_4.csv  simulation_3_5.csv  simulation_3_6.csv  simulation_MRU.csv  simulation_MRU_varying_m_and_noise.csv  simulation_MUA_varying_m_and_noise.csv  simulation_Singer_varying_m_noise_and_params.csv
src/: main.py  pratique.ipynb
utils/: Criterium.py  SampleEntropy.py  TraitementStatistiques.py  curvilinear.py  estimate.py  motiongen.py  plot.py  plot_2d_heatmap_or_contour.py  plot_sampen_insights.py  plot_simu.py
