[tool.poetry]
name = "p9"
version = "0.1.0"
description = ""
authors = ["getrichthroughcode <abdoulayediallo338@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
scipy = "^1.15.0"
pandas = "^2.2.3"
entropyhub = "^2.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
